--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,9 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
- - Made `sys.nodes` queries resilient. In case if one of the nodes is not
-   responding, the `id` and `name` fields of the `sys.nodes` table is still
-   evaluated for that node.
+  - Queries on the sys.nodes table will now short circuit in case some nodes in
+    the cluster are unresponsive. All columns of the unresponsive nodes will
+    contain null values except id and name.
 
  - Fixed a race condition which could cause select statements to get stuck
 
