--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,9 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
-  - Queries on the sys.nodes table will now short circuit in case some nodes in
-    the cluster are unresponsive. All columns of the unresponsive nodes will
-    contain null values except id and name.
+ - Queries on the `sys.nodes` table will now short circuit in case some nodes
+   in the cluster are unresponsive. All columns of the unresponsive nodes will
+   contain null values except `id` and `name`.
 
  - Fixed a race condition which could cause select statements to get stuck
 
